# Proyecto_Final

./: .gitignore  CMakeLists.txt  Interfaz.cpp  LecturaCSV.cpp  LecturaCSV.h  Pelis.cpp  Pelis.h  README.md  Trie.h  TrieNode.cpp  Utils.cpp  Utils.h  main.cpp
docs/: pseudocode_busqueda.txt  pseudocode_insert_trie.txt  pseudocode_interfaz.txt  pseudocode_read_csv.txt
include/: Interfaz.h  LecturaCSV.h  Pelis.h  TrieNode.h
src/: Interfaz.cpp  LecturaCSV.cpp  Pelis.cpp  Trie.cpp  main.cpp
